fix minification whitespaces

--- a/src/css/plugins.css
+++ b/src/css/plugins.css
@@ -21,7 +21,7 @@
 }
 
 .time-picker .time-picker-table:after {
-    content: " ";
+    content: "\00a0";
     position: absolute;
     height: 15px;
     width: 15px;
@@ -48,7 +48,7 @@
     padding: 10px 0 0 0;
 }
 .time-picker .time-picker-table > .time-picker-number:before {
-    content: " ";
+    content: "\00a0";
     position: absolute;
     height: 80px;
     width: 2px;
@@ -94,15 +94,13 @@
     background-color: #fff;
 }
 .time-picker .time-picker-display-time:nth-child(1):after {
-    content: ":";
+    content: ":\00a0";
     margin: 0 0 0 0;
     padding: 0 0 0 0;
 }
 .time-picker .time-picker-display-time:nth-child(2):after {
-    content: ":";
+    content: ":\00a0";
 }
-
-
 
 .time-picker .time-picker-table>.time-picker-number:nth-child(1) {
     left:105px;
